--- a/tommy-client/src/app/app.component.html
+++ b/tommy-client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="boundary">
   <app-preloader></app-preloader>
-  <ng-container *ngIf="isLehavaConnection(); else noLehavaConnection">
+  <ng-container *ngIf="lehavaConnection; else noLehavaConnection">
     <app-header
     [userName]="userName"
     [tutorialUrl]="openConf.homepageTutorialVideoUrl"
